---
config:
  look: neo
  theme: mc
---
classDiagram
    class User {
        +uid: string
        +name: string
        +phoneNumber: string
        +timezone: string
        +pets: List~Pet~
        +addPet(p: Pet): void
        +removePet(petId: string): void
        +getPet(petId: string): Pet
        +getUpcomingPetTasks(days: int): List~PetTask~
    }

    class Pet {
        +uid: string
        +name: string
        +animalProfileId: string
        +birthDate: date
        +weightKg: float
        +medicalNotes: string
        +tasks: List~PetTask~
        +updateInfo(name: string, weightKg: float, medicalNotes: string): void
        +calculateAge(today: date): int
        +addTask(task: PetTask): bool
        +updateTask(taskId: string, updates: Map): bool
        +completeTask(taskId: string, completedAt: datetime): bool
        +getDueTasks(windowStart: datetime, windowEnd: datetime): List~PetTask~
    }

    class AnimalProfile {
        +uid: string
        +species: string
        +breed: string
        +lifeStage: string
        +defaultCareGuidelines: string
        +displayName(): string
    }

    class PetTask {
        +uid: string
        +petId: string
        +title: string
        +careType: string
        +instructions: string
        +dueAt: datetime
        +startAt: datetime
        +endAt: datetime
        +estimatedMinutes: int
        +status: string
        +priority: string
        +reminderMinutesBefore: int
        +isRecurring: bool
        +recurrenceRule: string
        +lastCompletedAt: datetime
        +nextDueAt: datetime
        +validateForPet(p: Pet): bool
        +markCompleted(completedAt: datetime): void
        +reschedule(newDueAt: datetime): void
        +isOverdue(now: datetime): bool
    }

    class PetTaskScheduler {
        +createTaskForPet(pet: Pet, task: PetTask): bool
        +detectPetTaskConflicts(pet: Pet, candidate: PetTask): List~PetTask~
        +autoScheduleRecurringTasks(pet: Pet, windowDays: int): List~PetTask~
        +getPetAgenda(pet: Pet, day: date): List~PetTask~
        +skipTask(taskId: string, reason: string): bool
    }

    User "1" --> "0..*" Pet : owns
    Pet "1" --> "1" AnimalProfile : has_profile
    Pet "1" *-- "0..*" PetTask : owns_tasks
    PetTaskScheduler "1" --> "0..*" Pet : manages
    PetTaskScheduler "1" --> "0..*" PetTask : schedules